engine-net-2/examples/Errors/FunctionMethodUnknownCompiled.grg
#include "Rules.grg"

sequence s1
{
	{ n:N=null; d:double=n.ff() }
}
